force-app/main/default/objects/PossibleCondition__c/PossibleCondition__c.object-meta.xml
<CustomObject>
    <label>Possible Condition</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Possible Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possible Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>