force-app/main/default/objects/PossibleCondition__c/fields/AppPatient__c.field-meta.xml
<CustomField>
    <fullName>AppPatient__c</fullName>
    <formula>Appointment__r.Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AppPatient</label>
    <type>Text</type>
</CustomField>