force-app/main/default/objects/PossibleCondition__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>Possible Conditions</relationshipLabel>
    <relationshipName>PossibleConditions</relationshipName>
    <type>Lookup</type>
</CustomField>