force-app/main/default/objects/PossibleCondition__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>