force-app/main/default/objects/PossibleCondition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment__c</columns>
    <columns>Condition__c</columns>
    <columns>Probability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>