force-app/main/default/objects/PossibleCondition__c/listViews/All_Possible_Conditions.listView-meta.xml
<ListView>
    <fullName>All_Possible_Conditions</fullName>
    <columns>NAME</columns>
    <columns>AppPatient__c</columns>
    <columns>Condition__c</columns>
    <columns>Appointment__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Possible Conditions</label>
</ListView>