force-app/main/default/objects/PossibleCondition__c/listViews/Fitered_By_User.listView-meta.xml
<ListView>
    <fullName>Fitered_By_User</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AppPatient__c</field>
        <operation>contains</operation>
        <value>Boka</value>
    </filters>
    <label>Fitered By User</label>
</ListView>